--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -10,7 +10,7 @@
   }
   
   .tags {
-    color: #ffd700;
+    color: greenyellow;
     opacity: 0.6;
     position: absolute;
     bottom: 0;
@@ -71,7 +71,7 @@
         }
 
         p {
-            font-style: 20px;
+            font-style: 100px;
             color: #fff;
             font-family: sans-serif;
             font-weight: 300;
