--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -71,7 +71,7 @@
         }
 
         p {
-            font-style: 100px;
+            font-size: 15px;
             color: #fff;
             font-family: sans-serif;
             font-weight: 300;
